Kreirana forma rezervacije

--- a/HClient/nbproject/project.properties
+++ b/HClient/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HClient
 excludes=
+file.reference.HCommon.jar=C:\\ProjektovanjeSoftveraVezbe\\Project\\HCommon\\dist\\HCommon.jar
+file.reference.jcalendar-1.4.jar=C:\\ProjektovanjeSoftveraVezbe\\jcalendar\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.HCommon.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
